fix phone and mailto links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,8 @@
     <!-- ################################################################################################ -->
     <div class="fl_left">
       <ul>
-        <li><i class="fa fa-phone"></i> 304-784-0172</li>
-        <li><i class="fa fa-envelope-o"></i> BoldnRepair.com</li>
+        <li><a href="tel:+13047840172"><i class="fa fa-phone"></i> 304-784-0172</a></li>
+        <li><a href="mailto:melhoir@gmail.com"><i class="fa fa-envelope-o"></i> BoldnRepair.com</a></li>
       </ul>
     </div>
     <div class="fl_right">
