--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,8 +24,8 @@
           Chapmanville, West Virginia 25508
           </address>
         </li>
-        <li><i class="fa fa-phone"></i> 304-784-0172</li>
-        <li><i class="fa fa-envelope-o"></i> boldnrepair@gmail.com</li>
+        <li><a href="tel:+13047840172"><i class="fa fa-phone"></i> 304-784-0172</a></li>
+        <li><a href="mailto:melhoir@gmail.com"><i class="fa fa-envelope-o"></i> BoldnRepair.com</a></li>
       </ul>
     </div>
     <div class="one_third">
