add address to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,6 +21,7 @@
       <ul class="nospace linklist contact">
         <li><i class="fa fa-map-marker"></i>
           <address>
+          61 Garnet Ave<br>
           Chapmanville, West Virginia 25508
           </address>
         </li>
