add disqus to site

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -62,5 +62,6 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery.backtotop.js"></script>
 <script src="js/jquery.mobilemenu.js"></script>
+<script id="dsq-count-scr" src="//boldnrepair.disqus.com/count.js" async></script>
 </body>
 </html>
