--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,8 @@
         </ul>
       </nav>
       <ul class="faico clear">
-        <li><a class="faicon-facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a class="faicon-google-plus" href="#"><i class="fa fa-google-plus"></i></a></li>
+        <li><a class="faicon-facebook" href="https://www.facebook.com/BoldnRepair/"><i class="fa fa-facebook"></i></a></li>
+        <li><a class="faicon-google-plus" href="https://plus.google.com/101683746452974306207"><i class="fa fa-google-plus"></i></a></li>
       </ul>
     </div>
     <div class="one_third">
